# gdp-pdf-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: judge_targets.py  run_pdf_targets.py  run_reducto_parse_plus_pdf_targets.py  vendor_clients.py
src/clients/: __init__.py  anthropic_client.py  google_client.py  openai_client.py  openrouter_client.py
src/surge_gdp_benchmark/: __init__.py  common.py  judge_targets.py  run_pdf_targets.py  run_reducto_parse_plus_pdf_targets.py  vendor_clients.py
src/surge_gdp_benchmark/clients/: anthropic_client.py  google_client.py  openai_client.py  openrouter_client.py
